Update pom to last working macOS signing

--- a/pom.xml
+++ b/pom.xml
@@ -229,13 +229,11 @@
 					</plugin>
 
 
+					
 					<!--There is an issue with coide signing in the macosappbundler-maven-plugin. Details of the issue are here.
 					https://developer.apple.com/library/archive/qa/qa1940/_index.html  
 					To get round this run a script afterwards which signs the .app and create an alternative dmg file which is signed  -->
-					<!-- App sepecific passowrd aqnu-fcyf-itol-dsgq -->
-
-
-					<!--<plugin>
+					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
 						<artifactId>exec-maven-plugin</artifactId>
 						<version>3.5.0</version>
@@ -247,14 +245,24 @@
 									<goal>exec</goal>
 								</goals>
 								<configuration>
-					                <executable>bash</executable>
-					                <arguments>
-					                    <argument>${project.basedir}/build/macos/build_and_sign.sh</argument>
-					                </arguments>
-					            </configuration>
+									<executable>bash</executable>
+									<arguments>
+										<argument>-c</argument>
+										<argument>
+											echo ${project.basedir}/target/${project.build.finalName}.dmg
+											xattr -cr ${project.basedir}/target/PAMGuard.app
+											codesign --force --sign "3rd Party Mac Developer Application: Jamie Macaulay" ${project.basedir}/target/PAMGuard.app
+											cp -r ${project.basedir}/target/PAMGuard.app ${project.basedir}/target/bundle/PAMGuard.app
+											cd ${project.basedir}/target/bundle
+											hdiutil create -srcfolder ${project.basedir}/target/bundle -volname "PAMGuard" -fs HFS+ -o "${project.build.finalName}-signed.dmg"
+											rm -r ${project.basedir}/target/bundle/PAMGuard.app
+										</argument>
+									</arguments>
+								</configuration>
 							</execution>
 						</executions>
-					</plugin>-->
+					</plugin>
+				
 					
 				</plugins>
 			</build>
@@ -317,7 +325,7 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-shade-plugin</artifactId>
 						<version>3.6.0</version>
-						<configuration>	
+						<configuration>
 							<filters>
 								<!-- Moved these filters up to here from where they were int <executions><execution><configurtion> 
 								based on advice at https://stackoverflow.com/questions/34738653/maven-shade-plugin-does-not-exclude-the-manifest-signature-files
@@ -750,11 +758,11 @@
 		</dependency>
 
 		<!-- html to markdown conversion https://github.com/furstenheim/copy-down --> 
-    <dependency>
-        <groupId>io.github.furstenheim</groupId>
-        <artifactId>copy_down</artifactId>
-        <version>1.1</version>
-    </dependency>
+	    <dependency>
+	        <groupId>io.github.furstenheim</groupId>
+	        <artifactId>copy_down</artifactId>
+	        <version>1.1</version>
+	    </dependency>
 
 		<!-- https://search.maven.org/artifact/org.kordamp.ikonli/ikonli-javafx/12.2.0/jar -->
 		<!-- Icon symbol pack to replace FontAwesome.  This is the core library, and the
